# TonalCreamAssistant

./: .gitignore  README.md
.github/workflows/: codacy-analysis.yml  dart.yml  isort.yml  pylint.yml
backend/: .env.example  README.md  docker-compose.yml
backend/db/: db_schema.sql
backend/docs/openapi/: api.json
backend/etc/nginx/conf.d/: site.conf
backend/services/admin_panel/: .gitignore  Dockerfile  pyproject.toml
backend/services/admin_panel/admin_panel/: asgi.py  settings.py  urls.py  wsgi.py
backend/services/cv/: Dockerfile  main.py  pyproject.toml  service.py
backend/services/cv/api/v1/cv/: __init__.py  tonal.py
backend/services/cv/schemas/: color_schema.py  error_schema.py
backend/services/cv/services/: test_cv.py  tonal_cv.py
cv_algs/source/: algs.py
diagrams/: architecture.puml
frontend/: README.md
frontend/src/: analysis_options.yaml  pubspec.yaml
frontend/src/firebase_with_flutter/: README.md  pubspec.yaml
frontend/src/firebase_with_flutter/android/app/: build.gradle
frontend/src/firebase_with_flutter/ios/Runner/: Info.plist
frontend/src/firebase_with_flutter/ios/Runner.xcodeproj/: project.pbxproj
frontend/src/firebase_with_flutter/test/: widget_test.dart
frontend/src/firebase_with_flutter/web/: index.html  manifest.json
frontend/src/firebase_with_flutter/windows/: CMakeLists.txt
frontend/src/firebase_with_flutter/windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  utils.cpp  win32_window.cpp  win32_window.h
frontend/src/lib/: main.dart
(+4 files in other folders)
