[tool.poetry]
name = "cv"
version = "0.1.0"
description = ""
authors = ["ilyakochankov <ilyakochankov@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.9"
opencv-python = "^4.5.3"
matplotlib = "^3.4.3"
colorthief = "^0.2.1"
scikit-learn = "^1.0"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
